# optix_collsion_check_linux

./: .gitignore  CMakeLists.txt  run.sh
TestSingleRay/: CMakeLists.txt  LaunchParams.h  LaunchParams.h.bak_rotcache  LaunchParams.h.bak_step3  SampleRenderer.cpp  SampleRenderer.h  SamplingGeometryTest.cpp  SamplingUtils.cpp  SamplingUtils.h  devicePrograms.cu  devicePrograms_opt.cu  main.cpp  utils.h
mesh/tools/: PoS_66.off  PoS_66_cg.off  PoS_66_half_sphere.off  ToolHeadSample_r1.off  carriage_r1.5_r25_158.off
